[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Enemy1shot.png" type="Texture" id=1]
[ext_resource path="res://Scene/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://assets/GunSplash.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[sub_resource type="Animation" id=2]
resource_name = "EnemyShot"
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 4, 4 ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.036
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.036, 0.072, 0.108, 0.144, 0.18, 0.216, 0.252, 0.72, 0.756, 0.792, 0.828, 0.864, 0.9, 0.936, 0.972 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GunSplash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Enemy1" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Enemy2" type="AnimationPlayer" parent="."]
anims/EnemyShot = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Reload" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="gunSplashAnim" type="AnimationPlayer" parent="Node2D"]
anims/shot = SubResource( 4 )

[node name="GunSplash" type="Sprite" parent="Node2D"]
position = Vector2( -48, -8 )
texture = ExtResource( 3 )
hframes = 3
vframes = 3
frame = 6

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
